tests/ui/runtime-outgoing-peer-removed.stderr
error[E0599]: no method named `peer` found for struct `Outgoing<'f>` in the current scope
  --> tests/ui/runtime-outgoing-peer-removed.rs:25:26
   |
25 |         let _ = outgoing.peer();
   |                          ^^^^ method not found in `Outgoing<'f>`
